syntax = "proto3";

package calculator;

option go_package = "github.com/hiosi123/gRPC/calculator/proto";

message AvgRequest {
    int64 num = 1;
}

message AvgResponse {
    int64 result = 1;
}